@@ -1,5 +1,6 @@
 2020-XX-XX   1.3.1:
 -------------------
+  * add `.clear()` method
 
 
 2020-07-06   1.3.0:
